# plant_care_system

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  compose.yaml
.github/workflows/: docker-deployment.yaml  rust.yml
backend/: Cargo.toml  Dockerfile  Rocket.toml
backend/src/: api.rs  main.rs  services.rs
core_systems/: Cargo.toml
core_systems/src/: models.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
frontend/src/: lib.rs  main.rs
hardware/: Cargo.toml
hardware/src/: actuators.rs  lib.rs  main.rs  sensors.rs
hardware/src/sensors/: moisture.rs
k3s/production/: backend.yaml  frontend.yaml
shared/src/models/: reading.rs
